--- a/Pratice0525/Pratice0525/Properties/Settings.settings
+++ b/Pratice0525/Pratice0525/Properties/Settings.settings
@@ -1,13 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Lab0524.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Pratice0525.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="cnStr" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=YOWANEHAKU\SQLEXPRESS;Initial Catalog = AdventureWorksDW; Integrated Security = True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=YOWANEHAKU\SQLEXPRESS;Initial Catalog = Lab; Integrated Security = True&lt;/ConnectionString&gt;
+  &lt;ProviderName /&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=YOWANEHAKU\SQLEXPRESS;Initial Catalog = AdventureWorksDW; Integrated Security = True</Value>
+      <Value Profile="(Default)">Data Source=YOWANEHAKU\SQLEXPRESS;Initial Catalog = Lab; Integrated Security = True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
